# proyect_gp4

./: README.md
gp4_description/: CMakeLists.txt  package.xml
gp4_description/launch/: load_gp4.launch  robot_interface_streaming_gp4.launch  robot_state_visualize_gp4.launch  test_gp4.launch
gp4_description/urdf/: gp4.xacro  gp4_macro.xacro
gp4_gazebo/: CMakeLists.txt  package.xml
gp4_gazebo/config/: gp4_arm_controller.yaml  gripper_controller_robotiq.yaml
gp4_gazebo/launch/: gp4_control.launch  gp4_gazebo.launch  gp4_gazebo_moveit.launch  load_gp4.launch  spawn_gp4.launch
gp4_gazebo/models/desk_brown/: model.sdf
gp4_gazebo/urdf/: belt.xacro  camera.xacro  gazebo.xacro  gazebo_2f.xacro  gazebo_transmission.xacro  gp4_main.xacro  transmission_2f.xacro
gp4_gazebo/worlds/: pick.world  place2.world
gp4_master/: CMakeLists.txt  package.xml
gp4_master/launch/: gp4_movement.launch  spawn_cilinder.launch
gp4_master/models/cylinder/: model.sdf
gp4_master/models/cylinder_green/: model.sdf
gp4_master/models/cylinder_orange/: model.config  model.sdf
gp4_master/src/: color_sensor.py  motion_plan.py
gp4_moveit/: .setup_assistant  CMakeLists.txt  package.xml
gp4_moveit/config/: fake_controllers.yaml  gazebo_gp4_main.urdf  gp4_main.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
gp4_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
